samples/_failures_safe/1761267612_eaf4c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae3004c6.c: In function ‘main’:
./samples/SAFE/__tmp_ae3004c6.c:187:33: error: expected ‘)’ at end of input
  187 |         if (state == STATE_ERROR
      |            ~                    ^
      |                                 )
./samples/SAFE/__tmp_ae3004c6.c:187:9: error: expected declaration or statement at end of input
  187 |         if (state == STATE_ERROR
      |         ^~
./samples/SAFE/__tmp_ae3004c6.c:187:9: error: expected declaration or statement at end of input
